--- a/src/UI/UIComponents/PAGES/uniqueImagePage/components/uniqueTopSection/uniqueTopSection.module.scss
+++ b/src/UI/UIComponents/PAGES/uniqueImagePage/components/uniqueTopSection/uniqueTopSection.module.scss
@@ -4,8 +4,8 @@
   justify-content: space-between;
 
   width: 100%;
-  max-height: inherit;
-
+  height: fit-content;
+  max-height: 600px;
   position: relative;
 
   .uniqueTopLeft {
@@ -44,7 +44,9 @@
     top: 120px;
     width: 50%;
 
-    height: fit-content;
+    max-height: 600px;
+
+    display: flex;
   }
 }
 
@@ -117,6 +119,7 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
+    object-position: center;
   }
 }
 
